crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE num_exp_ln (id int4, expected numeric(1000,800));"
---
CreateStmt@0..62
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..23
    Ident@13..23 "num_exp_ln"
  Whitespace@23..24 " "
  Ascii40@24..25 "("
  ColumnDef@25..32
    Ident@25..27 "id"
    Whitespace@27..28 " "
    TypeName@28..32
      Ident@28..32 "int4"
  Ascii44@32..33 ","
  Whitespace@33..34 " "
  ColumnDef@34..59
    Ident@34..42 "expected"
    Whitespace@42..43 " "
    TypeName@43..59
      Numeric@43..50 "numeric"
      Ascii40@50..51 "("
      AConst@51..55
        Iconst@51..55 "1000"
      Ascii44@55..56 ","
      AConst@56..59
        Iconst@56..59 "800"
  Ascii41@59..60 ")"
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

