crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@171.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_sub VALUES (3,7,'-60302029489319384366844949868013911738.2322712404088283093870869198708849258097125725036189625900174440196153781995220721511009855207486224837798752903681993777275846325950111427710563453217985216966456785944859989497422927661683538629473170704026975786513125842675604577233871570629808699803522400038975396500769162308448069085909755023233588510630417065084295051270219462289785473643946404281422516357503746700705970360169619852905053433235726497292406142332833');"
---
InsertStmt@0..504
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_sub"
  Whitespace@23..24 " "
  SelectStmt@24..502
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..502
      AConst@32..33
        Iconst@32..33 "3"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "7"
      Ascii44@35..36 ","
      AConst@36..502
        Sconst@36..502 "'-6030202948931938436 ..."
  Ascii41@502..503 ")"
  Ascii59@503..504 ";"

